--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.3",
     "flowbite-react": "^0.7.2",
     "next": "14.1.0",
     "react": "^18",
@@ -16,6 +17,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
